[FIX](frontend): Fixed issue with chat scrollbar and friend list scrollbar

--- a/EncChat/src/components/UserPage/UserPage.css
+++ b/EncChat/src/components/UserPage/UserPage.css
@@ -1,3 +1,10 @@
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+    overflow: hidden;
+}
+
 .userPage {
     display: flex;
     height: 100vh;
